--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@semantic-release/commit-analyzer": "^11.1.0",
+    "@semantic-release/git": "^10.0.1",
+    "@semantic-release/github": "^9.2.6",
+    "@semantic-release/npm": "^11.0.2",
+    "@semantic-release/release-notes-generator": "^12.1.0",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
@@ -27,6 +32,7 @@
     "eslint-plugin-react-refresh": "^0.4.5",
     "eslint-plugin-storybook": "^0.6.15",
     "prettier": "^3.2.5",
+    "semantic-release": "^23.0.2",
     "typescript": "^5.2.2",
     "vite": "^5.1.0"
   }
